--- a/index.html
+++ b/index.html
@@ -1,8 +1,148 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Eric Nalisnick | University of Amsterdam</title>
+		<link rel="stylesheet" href="style.css">
+		<style>
+			.markdown-body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+			@media (max-width: 767px) {
+				.markdown-body {
+					padding: 15px;
+				}
+				.left {
+			    width: 100%;
+			  }
+			  .right {
+			    width: 100%;
+			  }
+				.portrait {
+					margin-bottom: 1em;
+			  }
+			}
+			html {
+			  width: 100vw;
+			}
+			body {
+			  overflow-x: hidden;
+			}
+		</style>
+	</head>
+	<body class="markdown-body">
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+	 		<div class="row">
+				<div class="column-picture left">
+		 			<img class="portrait" src="Nalisnick_Headshot.jpeg">
+				</div>
+				<div class="column-picture right">
+				  <h2>Eric Nalisnick</h2>
+				  <p>Assistant Professor<br/>
+				    <a href="https://ivi.uva.nl/">Informatics Institute</a><br/>
+				    <a href="https://www.uva.nl/en">University of Amsterdam</a><br/><br/></p>
+
+				  <p><a href="mailto:e.t.nalisnick@uva.nl">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/enalisnick/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=cb1ZN7AAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://twitter.com/eric_nalisnick">Twitter</a></p> <br/>
+				</div> 
+
+				<p>I am interested in building safe and robust intelligent systems with a human-centered design.  To accomplish this, my research develops novel machine learning techniques, which are often rooted in probabilistic modeling and computational statistics.  Questions I am particularly interested in are: <a href="https://proceedings.mlr.press/v130/nalisnick21a.html">how can we incorporate a human's prior knowledge?</a>, <a href="https://openreview.net/forum?id=H1xwNhCcYm">how can we detect when the system is failing?</a>, and <a href="https://arxiv.org/abs/2202.03673">how to combine human and machine decision making?</a>  Some applications of importance to me are: <a href="http://proceedings.mlr.press/v85/ji18a">healthcare<a>, <a href="https://arxiv.org/abs/2206.15455">moderation of online content<a>, and <a href="https://realworldml.github.io/files/cr/paper72.pdf">sign language processing<a>.</p>
+
+<p>Affiliations:  <a href="https://amlab.science.uva.nl/">Amsterdam Machine Learning Lab</a>   /  <a href="https://ivi.fnwi.uva.nl/uvaboschdeltalab/">UvA-Bosch Delta Lab</a>  /  <a href="https://www.signlab-amsterdam.nl/">SignLab Amsterdam</a></p>
+
+			<h4>Selected Publications</h4>
+			<div class="row">
+			  <div class="column">
+			    <ul>
+			      <li> <a href="https://openreview.net/forum?id=H1xwNhCcYm"><i>Do Deep Gen. Models Know What They Don't Know?</i> </a></li>
+			      <li><a href="https://arxiv.org/abs/2202.03673"><i>Calibrated Learning to Defer with One-vs-All Classifiers</i> </a></li>
+			      <li><a href="https://arxiv.org/abs/2210.16955"><i>Learning to Defer to Multiple Experts</i> </a></li>
+			    </ul>
+			  </div>
+			  <div class="column">
+			    <ul>
+                              <li><a href="https://arxiv.org/abs/2010.14689"><i>Bayesian Deep Learning via Subnetwork Inference</i> </a></li>
+                              <li><a href="https://proceedings.mlr.press/v130/nalisnick21a.html"><i>Predictive Complexity Priors</i> </a></li>
+                              <li><a href="https://papers.nips.cc/paper/2019/hash/84c2d4860a0fc27bcf854c444fb8b400-Abstract.html"><i>Bayes Batch Active Learning as Sparse Subset Approx.</i> </a></li>
+                            </ul>
+			  </div>
+			</div>
+
+			 <h4>Selected Talks</h4>
+                        <div class="row">
+                          <div class="column">
+                            <ul>
+                              <li><a href="Calibrated_L2D_talk.pdf"><i>On the Calibration of Learning-to-Defer Systems</i></a></li>
+                              <li><a href="PredCP_talk.pdf"><i>Predictive Complexity Priors</i></a></li>
+                            </ul>
+                          </div>
+                          <div class="column">
+                            <ul>
+                              <li><a href="https://slideslive.com/38930809/invited-talk-detecting-distribution-shift-with-deep-generative-models"><i>Detecting Distribution Shift with Deep Gen. Models</i></a></li>
+			      <li><a href="Dropout_talk.pdf"><i>Dropout as a Structured Shrinkage Prior</i></a></li>
+                            </ul>
+                          </div>
+                        </div>
+
+			<h2></h2>
+			<h3>Research Group</h3>
+			
+			<div class="row">
+                          <div class="column">
+			    PhD Candidates:
+                            <ul>
+			      <li> <a href="https://rajevv.github.io/">Rajeev Verma</a> (with <a href="https://www.bosch-ai.com/research/researcher-pages/t_overviewpage_98.html">Voker Fischer</a>)</li>
+			      <li> <a href="https://linkedin.com/in/alexander-timans">Alexander Timans</a><br/>(with <a href="https://ksakmann.github.io/">Kaspar Sakmann</a> and <a href="https://www.bosch-ai.com/research/researcher-pages/t_overviewpage_51.html">Christoph-Nikolas Straehle</a>)</li>
+			      <li> <a href="https://metodj.github.io/">Metod Jazbec</a> (with <a href="https://www.bosch-ai.com/research/researcher-pages/t_overviewpage_133.html">Dan Zhang</a>)</li>
+			      <li> <a href="https://linkedin.com/in/mona-schirmer-731365119">Mona Schirmer</a> (with <a href="https://www.bosch-ai.com/research/researcher-pages/t_overviewpage_133.html">Dan Zhang</a>)</li>
+			      <li> <a href="https://dvtailor.github.io/">Dharmesh Tailor</a></li>
+			      <li> <a href="https://scholar.google.com/citations?user=ikZj2E8AAAAJ">Putra Manggala</a> (with <a href="http://hoos.ca/main.html">Holger Hoos</a>)</li>
+			      <li> <a href="https://scholar.google.com/citations?user=ooWi908AAAAJ&hl=enJ">Saba Amiri</a> (with <a href="https://aszbelloum.wixsite.com/aszbelloum">Adam Belloum</a> and <a href="https://nl.linkedin.com/in/sanderklous">Sander Klous</a>)</li>
+			      <li> <a href="https://urjakh.github.io/">Urja Khurana</a> (at Vrije Univ., with <a href="http://wordpress.let.vupr.nl/antske/">Antske Fokkens</a>) 
+			      <li> <a href="https://mrinanksharma.github.io/">Mrinank Sharma</a><br/>(at Oxford, with <a href="https://www.robots.ox.ac.uk/~twgr/">Tom Rainforth</a> and <a href="http://www.stats.ox.ac.uk/~teh/index.html">Yee Whye Teh</a>)</li>
+                            </ul>
+                          </div>
+                          <div class="column">
+			    Vacancies:
+                            <ul>
+			      <li><i>None at this time.</i>
+                            </ul>
+                          </div>
+                        </div>
+
+
+			<h2></h2>
+			<h3>Courses Taught</h3>
+
+			<ul>
+			  <li><a href="https://studiegids.uva.nl/xmlpages/page/2020-2021/zoek-vak/vak/79019">Leren: Introduction to Machine Learning</a>  (Undergraduate, 2020 - 2022)</li>
+			  <li><a href="https://uvadl2c.github.io/">Module on Bayesian Deep Learning, Deep Learning II</a>  (Graduate, 2022 - present)</li>
+			 </ul>
+
+			<h2></h2>
+                        <h3>Venues</h3>
+                        <ul>
+                          <li>
+                            <a href="http://bayesiandeeplearning.org/">Workshop on <i>Bayesian Deep Learning</i></a></li>
+			  <li>
+                            <a href="https://ad4sd.github.io/seminars/">Seminar on <i>Anomaly Detection for Scientific Discovery</i></a></li>
+			  <li>
+                            <a href="https://tractable-probabilistic-modeling.github.io/tpm2022/">Workshop on <i>Tractable Probabilistic Modeling</i></a></li>
+                          <li>
+                            <a href="https://www.mdpi.com/journal/entropy/special_issues/prob_meth_DL">Entropy: <i>Probabilistic Methods for Deep Learning</i></a></li>
+                        </ul>
+
+			 <h2></h2>
+                        <h3>Funding</h3>
+                        <ul>
+                          <li>
+                            <a href="https://www.nwo.nl/en/researchprogrammes/nwo-talent-programme/projects-veni/veni-2021">Veni</a>,  <a href="https://www.nwo.nl/en/researchprogrammes/nwo-talent-programme">NWO Talent Programme</a>: <i>Continual Learning under Human Guidance</i> (2022 - 2026)</li> 
+                         </ul>
+
+
+	</body>
+</html>
