--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Eric Nalisnick | University of Amsterdam</title>
+		<title>  | University of Amsterdam</title>
 		<link rel="stylesheet" href="style.css">
 		<style>
 			.markdown-body {
@@ -39,7 +39,7 @@
 
 	 		<div class="row">
 				<div class="column-picture left">
-		 			<img class="portrait" src="Nalisnick_Headshot.jpeg">
+		 			<img class="portrait" src="Xuming_Headshot.jpeg">
 				</div>
 				<div class="column-picture right">
 				  <h2>Eric Nalisnick</h2>
