--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>  | University of Amsterdam</title>
+		<title>Xuming Ran | University of Amsterdam</title>
 		<link rel="stylesheet" href="style.css">
 		<style>
 			.markdown-body {
