--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				  <h2>Xuming Ran</h2>
 				  <p>Research Engineer<br/>
 				    <a href="https://www.shlab.org.cn/">AI for Science</a><br/>
-				    <a href="https://www.uva.nl/en">University of Amsterdam</a><br/><br/></p>
+				    <a href="https://www.shlab.org.cn/">Shanghai AI Laboratory</a><br/><br/></p>
 
 				  <p><a href="mailto:e.t.nalisnick@uva.nl">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/enalisnick/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=cb1ZN7AAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://twitter.com/eric_nalisnick">Twitter</a></p> <br/>
 				</div> 
