--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 			  <div class="column">
 			    <ul>
-			      <li> <a href="https://openreview.net/forum?id=H1xwNhCcYm"><i>Do Deep Gen. Models Know What They Don't Know?</i> </a></li>
+			      <li> <a Xuming Ran, href="https://openreview.net/forum?id=H1xwNhCcYm"><i>Do Deep Gen. Models Know What They Don't Know?</i> </a></li>
 			      <li><a href="https://arxiv.org/abs/2202.03673"><i>Calibrated Learning to Defer with One-vs-All Classifiers</i> </a></li>
 			      <li><a href="https://arxiv.org/abs/2210.16955"><i>Learning to Defer to Multiple Experts</i> </a></li>
 			    </ul>
