--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 			  <div class="column">
 			    <ul>
-			      <li> <a Xuming Ran, href="https://openreview.net/forum?id=H1xwNhCcYm"><i>Do Deep Gen. Models Know What They Don't Know?</i> </a></li>
+			      <li> <a href="https://openreview.net/forum?id=H1xwNhCcYm"><i> Qi Xu, Sibo Liu, \textbf{Xuming Ran}, Yaxin Li, Jiangrong Shen, Huajin Tang, Jian K. Liu, and Gang Pan, Robust Sensory Information Reconstruction and Classification with Augmented Spikes,\textbf{Under Review} at: {\it IEEE Transactions on Neural Networks and Learning Systems, 2023.}}</i> </a></li>
 			      <li><a href="https://arxiv.org/abs/2202.03673"><i>Calibrated Learning to Defer with One-vs-All Classifiers</i> </a></li>
 			      <li><a href="https://arxiv.org/abs/2210.16955"><i>Learning to Defer to Multiple Experts</i> </a></li>
 			    </ul>
