--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
 
 			<h4>Selected Publications</h4>
 			    <ul>
-                   <li> <b>Xuming Ran</b>, et al,  <a href="bio.html">Self-supervised deep learning encodes multi-modalities features of genome sequence for detecting complex structural variants</a>, Submit to:  <i>  Nature Machine Intelligence</i> , 2023.</li>
+                  <li><b>Xuming Ran</b>, et al,  <a href="bio.html">Self-supervised deep learning encodes multi-modalities features of genome sequence for detecting complex structural variants</a>, Submit to:  <i>  Nature Machine Intelligence</i> , 2023.</li>
                   <li><b>Xuming Ran</b>, Jie Zhang, Ziyuan Ye, Haiyan Wu, Qi Xu, Huihui Zhou, and Quanying Liu. <a href="bio.html">A computational framework to unify representation similarity and function in biological and artificial neural networks.</a> Under Review at: <i> IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2022.</li>
                   <li><b>Xuming Ran</b>, Mingkun Xu, Qi Xu, Huihui Zhou, and Quanying Liu. <a href="bio.html">Bigeminal Priors Variational auto-encoder.</a> arXiv preprint arXiv:2010.01819, 2020.</li>
                   <li><b>Xuming Ran</b>, Mingkun Xu, Lingrui Mei, Qi Xu, and Quanying Liu. <a href="bio.html">Detecting out-of-distribution samples via variational auto-encoder with reliable uncertainty estimation</a> <i>Neural Networks</i>, 2021.</li>
                   <li>Jie Yuan, <b>Xuming Ran</b>, Keyin Liu, Chen Yao, Yi Yao, Haiyan Wu, and Quanying Liu. <a href="bio.html">Machine Learning Applications on Neuroimaging for Diagnosis and Prognosis of Epilepsy: A Review,</a> <i>Journal of neuroscience methods</i>, 2021 .</li>
                   <li>Lingrui Mei, <b>Xuming Ran</b>, and Jin Hu. <a href="bio.html">Weakly Supervised Attention Inference Generative Adversarial Network for Text-to-Image</a>, <i> 2019 IEEE Symposium Series on Computational Intelligence (SSCI)</i>, 2019.</li>
-                  <li>Qi Xu, Jiangrong Shen, \textbf{Xuming}  \textbf{Ran}, Huajin Tang, Gang Pan, and Jian K. Liu. <a href="bio.html">Robust transcoding sensory information with neural spikes</a>, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2021.</li>
+                  <li>Qi Xu, Jiangrong Shen, <b>Xuming Ran</b>, Huajin Tang, Gang Pan, and Jian K. Liu. <a href="bio.html">Robust transcoding sensory information with neural spikes</a>, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2021.</li>
                   <li>Li Ma, Renjun Shuai, <b>Xuming Ran</b>, Wenjia Liu, and Chao Ye. <a href="bio.html">Combining DC-GAN with ResNet for blood cell image classification</a>, <i>Medical & biological engineering & computing</i> 58, no. 6 :1251-1264, 2020.</li>
                   <li>Qi Xu, Yuyuan Gao, Jiangrong Shen, Yaxin Li, <b>Xuming Ran</b>, Huajin Tang, Gang Pan, <a href="bio.html">Enhancing Adaptive History Reserving by Spiking Convolutional Block Attention Module in Recurrent Neural Networks</a>,Accepted : <i> NeurIPS</i>, 2023.</li>
                   <li>Shan-Shan Li, Yu-Shi Jiang, Xue-Ling Luo, <b>Xuming Ran</b>, Yuqiang Li, Dong Wu, Cheng-Xue Pan, Peng-Ju Xia, <a href="bio.html">Photocatalytic Vinyl Radical-Mediated Multicomponent 1,4-/1,8-carboimination Across Alkynes and Olefins/(Hetero)Arenes</a>, Accepted : <i> Science China Chemistry </i>, 2023.</li>
                   <li>Songming Zhang, Xiaofeng Chen, <b>Xuming Ran</b>, Zhongshan Li, Wenming Cao, <a href="bio.html">Even decision tree needs causality</a>, Under Review at: <i> IEEE Transactions on Neural Networks and Learning Systems</i>, 2022.</li>
                   <li>Hong Peng, Mingkun Xu  Bo Wang, Zheyu Yang,  <b>Xuming Ran</b>, Bo Li, Jiaohua Huo, Jing Pei, Yuanyuan Cui , Huafeng Xiao, Xin Lou, Cuiping Mao, Guangming Zhu, Liang zhang , Zheng You, Lin Ma,  <a href="bio.html">A New Virtual MR Contrast-enhancement Method based on Deep Learning: Faster, Safer, and Easier</a>, Under Review at: <i> Nature Machine Intelligence</i>, 2022.</li>
-                   <li> Qi Xu, Sibo Liu, <b>Xuming Ran</b>, Yaxin Li, Jiangrong Shen, Huajin Tang, Jian K. Liu, and Gang Pan, <a href="bio.html">Robust Sensory Information Reconstruction and Classification with Augmented Spikes</a>, Under Review at: <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2023. </li>
+                  <li> Qi Xu, Sibo Liu, <b>Xuming Ran</b>, Yaxin Li, Jiangrong Shen, Huajin Tang, Jian K. Liu, and Gang Pan, <a href="bio.html">Robust Sensory Information Reconstruction and Classification with Augmented Spikes</a>, Under Review at: <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2023. </li>
 			    </ul>
-			 <h4>Selected Talks</h4>
+		      <h4>Selected Talks</h4>
                             <ul>
                               <li><a href="Calibrated_L2D_talk.pdf"><i>On the Calibration of Learning-to-Defer Systems</i></a></li>
                               <li><a href="PredCP_talk.pdf"><i>Predictive Complexity Priors</i></a></li>
