--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                        </div>
                          <div class="column">
                         <ul>
-			 <li>Deep generative model & iInformation theory </li>
+			 <li>Deep generative model & Information theory </li>
 			 <li>Deep generative model & Closed-loop Transcription </li>
 			 <li>Deep generative model & Novelty detection </li>
 			 <li>Deep generative model & Image synthesis </li>
