--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 				    <a href="https://www.shlab.org.cn/">AI for Science</a><br/>
 				    <a href="https://www.shlab.org.cn/">Shanghai AI Laboratory</a><br/><br/></p>
 
-				  <p><a href="ranxuming@gmail.com">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="Xuming_CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/ranxuming/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=oTZip-cAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://www.researchgate.net/profile/Xuming-Ran">Research Gate</a></p> <br/>
-				</div>  
+				  				  <p><a href="ranxuming@gmail.com">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="Xuming_CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/ranxuming/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=oTZip-cAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://www.researchgate.net/profile/Xuming-Ran">Research Gate</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="blog.html">Blog</a> </p> <br/>
 				<p>I am very interested in the interdisciplinary of Neuroscience and AI (also called NeuroAI). I want to be inspired by neuroscience to improve the performance of ML algorithms and use ML tools to simulate the function of the special brain regions in the future. </p>
 				AI & Neuroscience: Visual cortex modeling, Neural encoding and decoding, Brain-inspired computing<br />
 				AI & Statistics: Deep generative model, Information theory; Self-supervised learning, Image synthesis,<a href="https://www2.stat.duke.edu/~berger/papers/formal-def.pdf">Reference prior</a> <br />
