--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Eric Nalisnick</title>
+		<link rel="stylesheet" href="./style.css">
+		<style>
+			.markdown-body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+
+			@media (max-width: 767px) {
+				.markdown-body {
+					padding: 15px;
+				}
+			}
+			html {
+			  width: 100vw;
+			}
+			body {
+			  overflow-x: hidden;
+			}
+		</style>
+	</head>
+	<body class="markdown-body">
+			<p>Xuming Ran is a good man</p>
+	</body>
+</html>
