--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<h2></h2>
 			<h3>Talks</h3>
                 <ul>
-                <li><a href="https://www.sustech.edu.cn/en/events/english-mapping-v4-to-artificial-neurons-via-autoencoder-allows-decoding-visual-informaion.html"><i>Mapping V4 to Artificial Neurons via Autoencoder allows Decoding Visual Information</i></a></li>
+                <li><a href="https://cse.sustech.edu.cn/cn/lecture/view/id/562"><i>Mapping V4 to Artificial Neurons via Autoencoder allows Decoding Visual Information</i></a></li>
                 <li><a href="https://math.sustech.edu.cn/applied/11898.html?lang=en"><i>Deep Generative Model for Out-of-distribution Detection</i></a></li>
 				<li><a href="https://www.bilibili.com/video/BV1qL4y1s7V7/?spm_id_from=333.337.search-card.all.click&vd_source=6a872fcac11e47c14324ca8914bea7bf"><i>A computational framework to unify representation similarity and function in biological and artificial neural networks.</i></a></li>
 				</ul>
