--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Eric Nalisnick</title>
+		<title>Xuming Ran'Blog</title>
 		<link rel="stylesheet" href="./style.css">
 		<style>
 			.markdown-body {
@@ -29,6 +28,7 @@
 		</style>
 	</head>
 	<body class="markdown-body">
-			<p>Xuming Ran is a good man</p>
+		
+		<p>TBD</p>
 	</body>
 </html>
