--- a/index.html
+++ b/index.html
@@ -190,5 +190,33 @@
 				<li><a href="http://brain.tsinghua.edu.cn/info/one/455">CNeuro: Computational and Theoretical Neuroscience Summer School</a>, Tsinghua Laboratory of Brain and Intelligence </li>
 				<li><a href="https://www.csh-asia.org/?content/1159">AIBC: AI and Brain Computation Summer School </a>, Cold Spring Harbor Laboratory</li>
 			   </ul>
+		<div id="bottom-outer">
+                <div id="bottom-inner">
+                   
+                
+                    <br>PageView:<span id="result1"></span>
+
+                    -<span id="year"></span>
+
+
+                </div>
+            </div>
+        </div>
 	</body>	
+<script type="text/javascript">
+	//流量统计
+                    if (localStorage.pagecount) {
+                        localStorage.pagecount = Number(localStorage.pagecount) + 1;
+                    } else {
+                        localStorage.pagecount = 1;
+                    }
+                    document.getElementById("result1").innerHTML = localStorage.pagecount;
+
+
+            //年份获取
+
+            var myDate = new Date();
+            var year = myDate.getFullYear();
+            document.getElementById('year').innerHTML = year;
+</script>
 </html>
