--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<h4>Research Interests</h4>
                        <div class="row">
 							<ul>
-							<li>Generative model(e.g., VAE, PixelCNN, GAN, Glow, and Diffusion model) via first priciple of intellgince (Information theory and Closed-loop Transcription and <a href="https://www2.stat.duke.edu/~berger/papers/formal-def.pdf">Reference prior</a> )  </li>
+							<li>Generative model(e.g., VAE, PixelCNN, GAN, Glow, and Diffusion model) via first priciple of intellgince (Information theory, Closed-loop Transcription, and <a href="https://www2.stat.duke.edu/~berger/papers/formal-def.pdf">Reference prior</a> )  </li>
 							<li>Visual cortex computation via Generative model(e.g.,Visual cortex modeling, Neural encoding and decoding)   </li>
 							<li>Memory modelling with Visual cortex computation (Hippocampus modelling) </li>
 							<li>Continual learning via memory modelling (e.g., Excitation-inhibition balance, Learning method of NN, Self-supervised learning)  </li>
