--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<h4>Research Interests</h4>
                        <div class="row">
 							<ul>
-							<li>Generative model(e.g., VAE, PixelCNN, GAN, Glow, and Diffusion model) via first priciple of intellgince (Information theory, Closed-loop Transcription, and <a href="https://www2.stat.duke.edu/~berger/papers/formal-def.pdf">Reference prior</a> )  </li>
+							<li>Generative model(e.g., VAE, PixelCNN, GAN, Glow, and Diffusion model) via first priciple of intellgince (e.g., Information theory, Closed-loop Transcription, and <a href="https://www2.stat.duke.edu/~berger/papers/formal-def.pdf">Reference prior</a> )  </li>
 							<li>Visual cortex computation via Generative model(e.g.,Visual cortex modeling, Neural encoding and decoding)   </li>
 							<li>Memory modelling with Visual cortex computation (Hippocampus modelling) </li>
 							<li>Continual learning via memory modelling (e.g., Excitation-inhibition balance, Learning method of NN, Self-supervised learning)  </li>
@@ -66,9 +66,9 @@
                       </div>
 			<h2></h2>
 			<h3>Projects</h3>
-			<h4>Generative model for image synthesis and novelty detection</h4>
+			<h4>Generative model for image synthesis and out-of-distribution detection</h4>
 				<ul>
-					<li>VAE for Novelty detection </li>
+					<li>VAE for out-of-distribution detection </li>
 			        <div class="column-picture left">
 				        <img class="portrait" src="photo/project/Project4.VAE4OOD.png">
 		            </div>
