--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 				<h4>AI for Science</h4>
 				<ul>
-					<li>Multi-MAE for Genome variants detection  </li>
+					<li>Multi-MAE for structural variants detection  </li>
 					<div class="column-picture left">
 						<img class="portrait" src="photo/project/Project10.MAE4Genome.png">
 					</div>
