--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		            </div>
 					<p> <a href="#project:2"><b>[Paper]</b></a>  We study the out-of-distribution detection problem using likelihood-based models. We propose a novel \textit{Bigeminal Priors Variational Autoencoder (BPVAEs)} method to remediate the possible higher likelihood of VAEs on the out-of-distribution (OOD) examples than on the in-distribution (ID) examples. With shared encoder and decoder networks, our BPVAE models the ID and OOD data simultaneously using ID priors and OOD priors respectively. We prove that, given the appropriate priors, the OOD data that would not have been detected using the single-prior VAEs model is guaranteed to have lower likelihoods than the ID data using our BPVAE model. We also show empirically that our BPVAE model can generalize to the unseen OOD examples. We compare our model with other likelihood-based OOD detection methods. Our numerical results demonstrate the effectiveness of BPVAEs on several benchmark OOD detection tasks. </p> 
 				
-				    <li>GAN for Text-to-image synthesis  </li>
+				    <li>GAN for text-to-image synthesis  </li>
 			        <div class="column-picture left">
 				        <img class="portrait" src="photo/project/Project1.GAN4T2I.png">
 		            </div>
