--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 				</div>  
 				<p><b> Using generative models as a bridge to understand the biological and artificial intelligence.</b></p>
 				<p>My goal is to use the first principal intelligence theory to bridge the gap between artificial and biological intelligence. This theory of closed-loop transcription via rate reduction and information theory can help build a generative model that excels at image synthesis and novelty detection. Furthermore, the generative model can enhance the visual cortex computation because it shares the same property that the human or primate visual cortex's abstract attribute resembles the generative model's latent attribute. Since memory is associated with visual stimuli, we can investigate the relationship between the hippocampus and the visual cortex with a generative model. Additionally, we can apply the insights from memory to guide continual learning. Finally, I want to apply this new model to solve problems in science (e.g., biology, chemistry, and physics). </p>
-				Generative model, Visual cortex computation, Memory modelling, Continual learning, AI for Science.
+				<p><b>Generative model, Visual cortex computation, Memory modelling, Continual learning, AI for Science.</b></p>
+				
 	
 				<h4>Research Interests</h4>
                        <div class="row">
