--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                       </div>
 			<h2></h2>
 			<h3>Projects</h3>
-			<h4>Generative model for image synthesis and out-of-distribution detection</h4>
+			<h4>Generative model for out-of-distribution detection and image synthesis</h4>
 				<ul>
 					<li>VAE for out-of-distribution detection </li>
 			        <div class="column-picture left">
